fix: changed some folders
